2-3 modifs + changer le csv des prix

--- a/Code/views/pages/PDV.ejs
+++ b/Code/views/pages/PDV.ejs
@@ -44,14 +44,14 @@
           </label>
         </div>
       </section>
-      <section>
+      <main>
         <div id="leafletmap" class="map"></div>
         <div class="container">
           <p>
             Votre position est : <code id="position"><code>
           </p>
         </div>
-      </section>
+      </main>
       <footer class="footer">
         <% include ../parties/footer %>
       </footer>
