--- a/Code/views/pages/outilAdmin.ejs
+++ b/Code/views/pages/outilAdmin.ejs
@@ -50,7 +50,7 @@
                         Homme <input type="radio" name="sexe" placeholder=""><br>
                         Femme <input type="radio" name="sexe" placeholder=""><br>
                         Autre <input type="radio" name="sexe" placeholder=""><br>
-                        Numéro de téléphone : <input type="text" name="tel" placeholder="<%=utilisateur.tel %>"><br>
+                        Numéro de téléphone : <input type="number" name="tel" placeholder="<%=utilisateur.tel %>"><br>
                       </fieldset>
                     </section>
                     <section class="col-sm-6">
