--- a/Code/views/pages/Profil.ejs
+++ b/Code/views/pages/Profil.ejs
@@ -33,7 +33,7 @@
                 </ul>
                 <ul class="nav nav-sidebar">
                   <li><a href="/deconnexion.html">Se déconnecter</a></li>
-                  <li><a href="">Supprimer son compte</a></li>
+                  <li><a href="/supprimerCompte.html">Supprimer son compte</a></li>
                 </ul>
               </header>
               <section class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
