--- a/Code/views/pages/confirmCommande.ejs
+++ b/Code/views/pages/confirmCommande.ejs
@@ -39,7 +39,7 @@
                 Votre ancien solde : <%=balance%>
               </h4>
               <h4>
-                Votre nouveau solde : <%=(balance - prixTotal)%>
+                Votre nouveau solde : <%=(balance - prixTotal).toFixed(2)%>
               </h4>
 
               <button type="submit" class="btn btn-default btn-block">Confirmer la commande</button>
